[package]
name = "valence_terrain"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[dependencies]
flume = "0.11.0"
noise = "0.9.0"
rand = "0.8.5"
serde = "1.0.203"
serde_yml = "0.0.10"
valence = { git = "https://github.com/valence-rs/valence" }
valence_vstruc = { git = "https://github.com/EliiasG/valence_vstruc"}

[dev-dependencies]
valence = { git = "https://github.com/valence-rs/valence" }

[[example]]
name = "hot_reload"
path = "example/hot_reload.rs"